--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/anime.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="./src/anime.html"
                 >Anime Names</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="./about.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="./src/about.html"
                 >About Us</a
               >
             </li>
