--- a/src/about.html
+++ b/src/about.html
@@ -14,7 +14,7 @@
   <body style="background-color: #fed049">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Anime Quote</a>
+        <a class="navbar-brand" href="../index.html">Anime Quote</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/anime.html"
+              <a class="nav-link active" aria-current="page" href="./anime.html"
                 >Anime Names</a
               >
             </li>
@@ -44,21 +44,15 @@
     </nav>
 
     <div class="container">
-      <button id="animeNames" class="btn btn-danger my-4">
-        Get all the available Anime names
-      </button>
-      <div class="main">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item" id="randomAnimeName"></li>
-        </ul>
-      </div>
+      <h1 class="my-5 text-center">
+        Design and Coded by
+        <a href="https://github.com/Nitesh-bit">Nitesh Chaudhary</a>😎
+      </h1>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <script src="animeName.js"></script>
   </body>
 </html>
