--- a/src/anime.html
+++ b/src/anime.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/anime.html"
+              <a class="nav-link active" aria-current="page" href="./anime.html"
                 >Anime Names</a
               >
             </li>
@@ -44,15 +44,21 @@
     </nav>
 
     <div class="container">
-      <h1 class="my-5 text-center">
-        Design and Coded by
-        <a href="https://github.com/Nitesh-bit">Nitesh Chaudhary</a>😎
-      </h1>
+      <button id="animeNames" class="btn btn-danger my-4">
+        Get all the available Anime names
+      </button>
+      <div class="main">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item" id="randomAnimeName"></li>
+        </ul>
+      </div>
     </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <script src="animeName.js"></script>
   </body>
 </html>
