updated the index.html file location in index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body style="background-color: #fed049">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html">Anime Quote</a>
+        <a class="navbar-brand" href="./index.html">Anime Quote</a>
         <button
           class="navbar-toggler"
           type="button"
